# python-template

./: .gitignore  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  bug_report.md  component.md  component.md    pyproject.toml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: feature_request.md
src/components/: calculator.py  logger.py  notifier.py
src/hello_world/: main.py
tests/: test_hello_world.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_calculator_logger.py  test_logger_notifier.py
tests/unit/: test_calculator.py  test_logger.py  test_notifier.py
